--- a/TP1analyseur.html
+++ b/TP1analyseur.html
@@ -721,7 +721,8 @@
             </div>
         </div>
     </main>    
-    <script src="js/dist/bundle.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/420-2W6-EM/TP1analyseur@latest/js/dist/bundle.js" crossorigin="anonymous"></script>
+    <!--<script src="js/dist/bundle.js"></script>-->
 </body>
 
 </html>
