--- a/TP1analyseur.html
+++ b/TP1analyseur.html
@@ -35,20 +35,20 @@
                 <div id="conteneurFrame">
                     <div>
                         <h5>Page Accueil</h5>
-                        <iframe src="../Accueil.html" frameborder="1" id="pageAccueil"></iframe>
+                        <iframe src="TPetudiant/TP1-Dayron/Accueil.html" frameborder="1" id="pageAccueil"></iframe>
                     </div>
                     <div>
                         <h5>Page Recherche</h5>
-                        <iframe src="../Recherche.html" frameborder="1" id="pageRecherche"></iframe>
+                        <iframe src="TPetudiant/TP1-Dayron/Recherche.html" frameborder="1" id="pageRecherche"></iframe>
                     </div>
                     <div>
                         <h5>Page Detail</h5>
-                        <iframe src="../Detail.html" frameborder="1" id="pageDetail"></iframe>
+                        <iframe src="TPetudiant/TP1-Dayron/Detail.html" frameborder="1" id="pageDetail"></iframe>
                     </div>
                     <div>
                         <h5>Page Favoris</h5>
-                        <iframe src="../Favoris.html" frameborder="1" id="pageFavoris"></iframe>
-                    </div>
+                        <iframe src="TPetudiant/TP1-Dayron/Favoris.html" frameborder="1" id="pageFavoris"></iframe>
+                    </div>  
                 </div>
             </div>
         </div>
@@ -721,8 +721,8 @@
             </div>
         </div>
     </main>    
-    <script src="https://cdn.jsdelivr.net/gh/420-2W6-EM/TP1analyseur@latest/js/dist/bundle.js" crossorigin="anonymous"></script>
-    <!--<script src="js/dist/bundle.js"></script>-->
+    <!--<script src="https://cdn.jsdelivr.net/gh/420-2W6-EM/TP1analyseur@latest/js/dist/bundle.js" crossorigin="anonymous"></script>-->
+    <script src="js/dist/bundle.js"></script>
 </body>
 
 </html>
